# lorien

./: .gitattributes  .gitignore  AGENTS.md  API.md  AUDIT_REPORT.md  CHANGELOG.md  Dev_Quickstart.md  Home.py  Makefile  PHASE6E_IMPLEMENTATION_SUMMARY.md  PHASE6_README.md  QA_VERIFICATION.md  README.md  RELEASE_NOTES.md  RUN_INSTRUCTIONS.md  calc_export.csv  dev.sh  docs_audit_report.json  docs_audit_report.md  lorien.db-shm  lorien.db-wal  main.py  mkdocs.yml  pyproject.toml  requirements.txt  test_dict.json
.github/workflows/: api-ci.yml  ui-ci.yml
api/: __init__.py  additional_routes.py  app.py  db.py  dependencies.py  exceptions.py  main.py  metrics.py  models.py  routes.py  utils.py
api/core/: audit_expansion.py  audit_integration.py  dictionary_governance.py  etag.py  large_workbook_manager.py  metrics.py  orphan_repair.py  rbac.py  validators.py  vm_builder_enhanced.py
api/middleware/: __init__.py  auth.py  enhanced_auth.py  metrics_middleware.py  telemetry.py
api/repositories/: admin_repo.py  audit.py  concurrency.py  performance.py  tree_repo.py  validators.py  vm_builder.py
api/routers/: admin_root_audit_router.py  admin_router.py  admin_sanitize_router.py  audit.py  concurrency.py  conflicts_root_router.py  data_quality.py  dictionary.py  dictionary_export_router.py  (+35 more)
cli/: __init__.py  commands.py  main.py
core/: __init__.py  constants.py  engine.py  import_export.py  models.py  rules.py  text_utils.py  version.py
docs/: API.md  API_HEADER_SOT.md  API_ROUTES_REGISTRY.md  AUTH_RBAC.md  Backup_Restore.md  Beta_Acceptance_Checklist.md  Beta_SLA_Severity.md  DEPLOYMENT.md  DEVELOPMENT.md  DICTIONARY_GOVERNANCE.md  Demo_Scripts.md  DesignDecisions.md  Dev_Quickstart.md  ENV.md  LLM_README.md  Medical_Safety.md  ORPHAN_REPAIR.md  PERFORMANCE_GUIDE.md  PERFORMANCE_GUIDELINES.md  Phase2_Completion.md  Phase3_Completion.md  Phase4_Completion.md  PreBeta_Execution_Tracker.md  ProjectOverview.md  README.md  ReleaseNotes_v6.7.md  Release_Notes_v6.8.0-beta.1.md  Rollback_Plan.md  SLO_MONITORING.md  Schema.md  Setup_WSL.md  deletion_plan.md
llm/: __init__.py  config.py  json_utils.py  runner.py  safety.py
ops/: prune_flags.py
reports/: feature_status_ledger.csv  static_wiring_report.md  wiring_map.md
scripts/: audit_retention_sqlite.sql  nightly_rotation.sh  tag_beta.sh
storage/: __init__.py  migrate.py  schema.sql  sqlite.py
tests/: conftest.py  test_admin_clear.py  test_admin_sanitize_nan.py  test_api.py  test_api_health.py  test_app_imports.py  test_audit.py  test_auth_concurrency.py  test_bulk_upsert_children.py  test_calculator_navigation.py  test_completeness.py  test_conflict_group_resolve.py  test_conflicts_api.py  test_conflicts_node_id.py  test_conflicts_normalize.py  test_core.py  test_core_endpoints_exist.py  test_csv_contract.py  test_csv_header_freeze.py  test_data_quality.py  test_delete_parent_subtree.py  test_dictionary_crud_and_normalize.py  test_dictionary_export_endpoints_ok.py  test_dictionary_sync_list.py  test_dual_mount.py  test_dual_mount_contract.py  test_edit_tree.py  test_export_aliases_ok.py  test_export_endpoints_ok.py  test_flags_audit.py  test_flags_audit_branch.py  test_flags_cascade.py  test_flags_paging.py  test_flags_preview.py  test_flags_preview_and_audit.py  test_hard_replace_resets_labels.py  test_health_metrics_toggle.py  test_health_version.py  test_import_endpoint.py  test_import_export.py  (+47 more)
tools/: __init__.py  cli.py  docs_smoke.sh  migrate_db_path.py  run_all_tests.sh  run_api_dev.sh  smoke_beta.sh  ui_smoke.sh
ui_flutter/: CHANGELOG.md  PHASE6_IMPLEMENTATION_SUMMARY.md  README.md  analysis_options.yaml  pubspec.yaml  test_hard_replace.csv
ui_streamlit/: README.md  __init__.py  api_client.py  app.py  components.py  settings.py
utils/: version.py
(+464 files in other folders)
